<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/easy"/>

        <Button
            android:id="@+id/medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/medium"/>

        <Button
            android:id="@+id/hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/hard"/>
    </LinearLayout>

    <Button
        android:id="@+id/gameSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="MEDIUM_RECTANGLE"
        android:layout_marginTop="5dp"
        ads:adUnitId="ca-app-pub-8402023979328526/9625378973">
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:layout_marginTop="5dp"
        ads:adUnitId="ca-app-pub-8402023979328526/5466642112">
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
    </com.google.android.gms.ads.AdView>

</LinearLayout>
