<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BoardActivity">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".BoardActivity">

            <TextView
                android:id="@+id/bottomBorderViewTitle"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/bottomBorderText"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/bottomBorderView"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".BoardActivity">

            <TextView
                android:id="@+id/topBorderViewTitle"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/topBorderText"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/topBorderView"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <EditText
        android:id="@+id/userInput"
        android:hint="@string/userInputHint"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/userInputSubmit"
        android:text="@string/guessSubmit"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lastGuessResult"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/boardAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:layout_marginTop="5dp"
        ads:adUnitId="ca-app-pub-8402023979328526/7086328625">
        <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
    </com.google.android.gms.ads.AdView>

</LinearLayout>